--- a/SubtitleMonitor/SubtitleMonitor.csproj
+++ b/SubtitleMonitor/SubtitleMonitor.csproj
@@ -50,6 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackGroundWorkerInitInfo.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,6 +135,7 @@
     <Compile Include="SubtitleEdit\VobSub\VobSubPack.cs" />
     <Compile Include="SubtitleEdit\VobSub\VobSubParser.cs" />
     <Compile Include="SubtitleEdit\VobSub\VobSubWriter.cs" />
+    <Compile Include="Utils.cs" />
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
