add simple documentation

--- a/SubtitleMonitor/SubtitleMonitor.csproj
+++ b/SubtitleMonitor/SubtitleMonitor.csproj
@@ -47,6 +47,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -156,6 +157,13 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="..\DvbSubtitleExplorer.doc">
+      <Link>DvbSubtitleExplorer.doc</Link>
+    </None>
+    <None Include="..\DvbSubtitleExplorer.pdf">
+      <Link>DvbSubtitleExplorer.pdf</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
